--- a/StudentLifeApp/templates/index.html
+++ b/StudentLifeApp/templates/index.html
@@ -29,20 +29,24 @@
                     <button class="btn btn-primary btn-lg" type="submit">Add</button>
                 </form>
             </div>
+            
             <div class="col-sm-8 p-5">
                 <div class="alert alert-info text-center">Student Data</div>
                 <table class="table">
                     <thead>
-                        <td>rollno</td>
-                        <td>name</td>
-                        <td>email</td>
+                        <td>gender</td>
+                        <td>ageGroup</td>
+                        <td>year</td>
+                        <td>area</td>
                         <td>Update/Delete</td>
                     </thead>
                     {%for data in studata%}
                     <tr>
-                        <td>{{data.rollno}}</td>
-                        <td>{{data.name}}</td>
-                        <td>{{data.email}}</td>
+                        <td>{{data.id}}</td>
+                        <td>{{data.gender}}</td>
+                        <td>{{data.ageGroup}}</td>
+                        <td>{{data.year}}</td>
+                        <td>{{data.area}}</td>
                         <td>
                         <div class="d-flex">
                             <a href="update/{{data.id}}/" class="btn btn-success btn-sm mx-1">Edit</a>
